@@ -1,5 +1,5 @@
 const TITLE = "Cyclone Simulator";
-const VERSION_NUMBER = "20190713a";
+const VERSION_NUMBER = "20190714a";
 
 const SAVE_FORMAT = 2;  // Format #2 in use starting in v20190630a
 const EARLIEST_COMPATIBLE_FORMAT = 0;
@@ -151,7 +151,7 @@ const ENVDATA_NOT_FOUND_ERROR = "envdata-not-found";
 const LOADED_SEASON_REQUIRED_ERROR = "loaded-season-required";
 const LOAD_MENU_BUTTONS_PER_PAGE = 6;
 const ACTIVITY_MODE_NORMAL = 0;
-const ACTIVITY_MODE_OP = 1;
+const ACTIVITY_MODE_HYPER = 1;
 const ACTIVITY_MODE_WILD = 2;
 const ACTIVITY_MODES = 3;
 
