@@ -478,7 +478,7 @@ UI.init = function(){
 
     let gmodesel = yearsel.append(false,0,basinCreationMenuButtonSpacing,300,30,function(s){    // Activity mode selector
         let mode = newBasinSettings.actMode || 0;
-        mode = ['Normal','OP','Wild'][mode];
+        mode = ['Normal','Hyper','Wild'][mode];
         s.button('Activity Mode: '+mode,true);
     },function(){
         if(newBasinSettings.actMode===undefined) newBasinSettings.actMode = 0;
